--- a/mywebsite.html
+++ b/mywebsite.html
@@ -11,7 +11,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#aboutme">About Me</a></li>
-                        <li><a href="https://drive.google.com/file/d/1PdP4xwn6dmBX9xRwbuDWX2XtA8gJc6Aj/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li><a href="https://drive.google.com/file/d/1PdP4xwn6dmBX9xRwbuDWX2XtA8gJc6Aj/view?usp=share_link" target="_blank" rel="noopener noreferrer">Resume</a></li>
                         <li><a href="#javaproject1">Projects</a></li>
                         <li><a href="mailto:ajiang25@terpmail.umd.edu">Contact Me</a></li>
                     </ul>
